[package]
name = "viuer"
version = "0.7.1"
authors = ["Atanas Yankov <atanas.yankov98@gmail.com>"]
edition = "2021"
description = "Display images in the terminal"
documentation = "https://docs.rs/viuer"
readme = "README.md"
repository = "https://github.com/atanunq/viuer"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["terminal", "image"]
exclude = [".github"]

[dependencies]
termcolor = "^1"
crossterm = "^0.28"
ansi_colours = "^1"
image = "^0.25"
base64 = "^0.22"
tempfile = "^3"
console = { version = "^0.15", default-features = false }
lazy_static = "^1"

[dependencies.sixel-rs]
version = "^0.4"
optional = true

[features]
default = []
sixel = ["sixel-rs"]
